# SO-Projekt1

./: BoardGame.cpp  BoardGame.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  Main.cpp  Main.h  RandomHandler.cpp  RandomHandler.h  Sort.cpp  Sort.h  Structure.cpp  Structure.h  Timer.cpp  zyxchar.txt  zyxfloat.txt  zyxgame.txt  zyxint.txt
